# browser-crypto

./: CHANGELOG.md  Cargo.toml  index.html  readme.md  rustfmt.toml
.github/workflows/: benchmark-page.yml  release.yml  testing.yml
examples/benchmark/: Cargo.toml  README.md  index.html  worker.js
examples/benchmark/src/: bench.rs  lib.rs
pkg/: benchmark.js  benchmark_bg.wasm
src/: aes256gcm.rs  algorithm.rs  lib.rs
tests/: compare-with-pure.rs  usage.rs
