[package]
name = "browser-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
log-error = ["web-sys/console"]

[dependencies]
thiserror = { version = "2.0" }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
web-sys = { version = "0.3", features = [
    "console",
    "AesGcmParams",
    "Algorithm",
    "Crypto",
    "CryptoKey",
    "DomException",
    "Exception",
    "SubtleCrypto",
    "WorkerGlobalScope",
] }

[dev-dependencies]
aes-gcm = { version = "0.10" }
console_error_panic_hook = "*"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }
