[package]
name = "browser-crypto"
version = "0.1.1"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
edition = "2021"
description = "A safe Rust interface to browser-based cryptographic operations using the Web Crypto API"
repository = "https://github.com/jdrouet/browser-crypto"
license = "MIT"
keywords = ["cryptography", "wasm", "webcrypto", "browser", "encryption"]
categories = ["cryptography", "wasm", "web-programming"]
readme = "readme.md"
documentation = "https://docs.rs/browser-crypto"

exclude = [".github/*", ".gitignore", "tests/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
log-error = ["web-sys/console"]

[dependencies]
thiserror = { version = "2.0" }
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = [
    "AesGcmParams",
    "Algorithm",
    "Crypto",
    "CryptoKey",
    "DomException",
    "Exception",
    "SubtleCrypto",
    "WorkerGlobalScope",
] }

[dev-dependencies]
aes-gcm = { version = "0.10" }
console_error_panic_hook = { version = "0.1" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = { version = "0.3" }
web-sys = { version = "0.3", features = ["console"] }

[package.metadata.docs.rs]
# Enable all features when building docs
all-features = true
# Define the default target for documentation
default-target = "wasm32-unknown-unknown"
# Add any additional rustdoc flags
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["examples/benchmark"]
